@@ -5,6 +5,7 @@ PostGIS 2.2.7
   - #3965, ST_ClusterKMeans used to lose some clusters on initialization
            (Darafei Praliaskouski)
   - #3978, Fix KNN when upgrading from 2.1 or older (Sandro Santilli)
+  - #4055, ST_ClusterIntersecting dropping SRID (Daniel Baston)
   - #4017, lwgeom lexer memory corruption (Peter E)
 
 
